# numerical-analysis-exercises

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bisection.c  bisection.h  build.sh  clean.sh  const.h  funcdef.h  main.c  newton-raphson.c  newton-raphson.h  newton_raphson.h  secant.c  secant.h  test.c  type.h
boundary-value-problem/: README.md
boundary-value-problem/src/: const.h  laplace.c  laplace.h  main.c  type.h  util.c  util.h
definite-integral/: README.md
definite-integral/src/: const.h  derivative.h  difference.c  funcdef.h  integral.h  main.c  simpsons.c  trapezoidal.c
initial-value-problem/: README.md
initial-value-problem/src/: const.h  euler.c  fixed-euler.c  funcdef.h  main.c  runge-kutta.c  solve-method.h  type.h  util.c  util.h
nth-order-linear-equation/: README.md
nth-order-linear-equation-sor/: README.md
nth-order-linear-equation-sor/src/: calculate.c  calculate.h  const.h  main.c  solve.c  solve.h  util.c  util.h
nth-order-linear-equation/src/: gaussian-elimination.c  gaussian-elimination.h  main.c  util.c  util.h
root-finding/: README.md
root-finding/src/: main.c  type.h
src/: bisection.c  secant.c  solve-methods.h
